--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2663: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
       "  method=method,\n"
      ]
     },
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1997_index</td>\n",
        "      <td>monarchs1997</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1997_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1997_index  monarchs1997         4   \n",
+       "0  index  ix_monarchs1997_index  monarchs1997         3   \n",
        "1  table           monarchs1997  monarchs1997         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -959,16 +959,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export cleaned data to csv."
+    "### Export cleaned data to csv & pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs1997.pkl\")"
+    "new_table.to_pickle(\"Monarchs1997.pkl\")\n",
+    "new_table.to_csv(\"Monarchs1997.csv\")"
    ]
   }
  ],
