--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2663: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
       "  method=method,\n"
      ]
     },
@@ -93,7 +93,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs2000_index</td>\n",
        "      <td>monarchs2000</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs2000_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -110,7 +110,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs2000_index  monarchs2000         3   \n",
+       "0  index  ix_monarchs2000_index  monarchs2000         4   \n",
        "1  table           monarchs2000  monarchs2000         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -1203,16 +1203,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export cleaned data to csv."
+    "### Export cleaned data to csv & pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs2000.pkl\")"
+    "new_table.to_pickle(\"Monarchs2000.pkl\")\n",
+    "new_table.to_csv(\"Monarchs2000.csv\")"
    ]
   }
  ],
