--- a/Data/Monarchs_1998_cleanup.ipynb
+++ b/Data/Monarchs_1998_cleanup.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2663: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
       "  method=method,\n"
      ]
     },
@@ -1280,16 +1280,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export cleaned data to csv."
+    "### Export cleaned data to csv & pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs1998.pkl\")"
+    "new_table.to_pickle(\"Monarchs1998.pkl\")\n",
+    "new_table.to_csv(\"Monarchs1998.csv\")"
    ]
   }
  ],
