--- a/Data/Monarchs_1994_cleanup.ipynb
+++ b/Data/Monarchs_1994_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1994_index</td>\n",
        "      <td>monarchs1994</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1994_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1994_index  monarchs1994         4   \n",
+       "0  index  ix_monarchs1994_index  monarchs1994         3   \n",
        "1  table           monarchs1994  monarchs1994         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -117,7 +117,7 @@
        "1  CREATE TABLE \"monarchs1994\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "10   10        Distance  INTEGER        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "9                    Kansas City,\\nMO         0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "9                 Kansas City        MO"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "9                   Kansas City           MO"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        "9            USA"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
        "9       NaN      NaN     1994          NaN"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "9       Sep       27     1994  Sep 27 1994"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
        "35   1480  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,6 +1628,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table['Season']='1994'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1636,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1668,10 +1677,11 @@
        "Report Country            object\n",
        "Report Date       datetime64[ns]\n",
        "Miles                      int64\n",
+       "Season                    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,12 +1710,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_table.to_pickle(\"Monarchs1994.pkl\")\n",
-    "new_table.to_csv(\"Monarchs1994.csv\")"
+    "new_table.to_csv(\"csv/Monarchs1994.csv\")"
    ]
   }
  ],
