--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -1777,6 +1777,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table['Season']='1995'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1785,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1817,10 +1826,11 @@
        "Report Country            object\n",
        "Report Date       datetime64[ns]\n",
        "Miles                    float64\n",
+       "Season                    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,12 +1859,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_table.to_pickle(\"Monarchs1995.pkl\")\n",
-    "new_table.to_csv(\"Monarchs1995.csv\")"
+    "new_table.to_csv(\"csv/Monarchs1995.csv\")"
    ]
   }
  ],
