--- a/Data/Monarchs_1996_cleanup.ipynb
+++ b/Data/Monarchs_1996_cleanup.ipynb
@@ -1061,6 +1061,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table['Season']='1996'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1069,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1101,10 +1110,11 @@
        "Report Country            object\n",
        "Report Date       datetime64[ns]\n",
        "Miles                    float64\n",
+       "Season                    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,12 +1143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_table.to_pickle(\"Monarchs1996.pkl\")\n",
-    "new_table.to_csv(\"Monarchs1996.csv\")"
+    "new_table.to_csv(\"csv/Monarchs1996.csv\")"
    ]
   }
  ],
