--- a/Data/Monarchs_1998_cleanup.ipynb
+++ b/Data/Monarchs_1998_cleanup.ipynb
@@ -1213,6 +1213,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table['Season']='1998'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1221,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1253,10 +1262,11 @@
        "Report Country            object\n",
        "Report Date       datetime64[ns]\n",
        "Miles                     object\n",
+       "Season                    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,12 +1295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_table.to_pickle(\"Monarchs1998.pkl\")\n",
-    "new_table.to_csv(\"Monarchs1998.csv\")"
+    "new_table.to_csv(\"csv/Monarchs1998.csv\")"
    ]
   }
  ],
