--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -1136,6 +1136,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table['Season']='2000'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1144,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1176,10 +1185,11 @@
        "Report Country            object\n",
        "Report Date       datetime64[ns]\n",
        "Miles                    float64\n",
+       "Season                    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1223,7 @@
    "outputs": [],
    "source": [
     "new_table.to_pickle(\"Monarchs2000.pkl\")\n",
-    "new_table.to_csv(\"Monarchs2000.csv\")"
+    "new_table.to_csv(\"csv/Monarchs2000.csv\")"
    ]
   }
  ],
