--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -9,25 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import plotly as py\n",
-    "# import plotly.graph_objs as go\n",
-    "# import ipywidgets as widgets\n",
+    "import plotly as py\n",
+    "import plotly.graph_objs as go\n",
     "import pandas as pd\n",
     "import sqlite3\n",
     "import os\n",
     "from IPython.display import IFrame\n",
-    "# from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
-    "# init_notebook_mode(connected=True)\n",
-    "# import plotly.express as px"
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +82,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +215,15 @@
        "      <td>None</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Season</td>\n",
+       "      <td>TEXT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -231,10 +237,11 @@
        "4    4    Report State       TEXT        0       None   0\n",
        "5    5  Report Country       TEXT        0       None   0\n",
        "6    6     Report Date  TIMESTAMP        0       None   0\n",
-       "7    7           Miles       REAL        0       None   0"
+       "7    7           Miles       REAL        0       None   0\n",
+       "8    8          Season       TEXT        0       None   0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,20 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2663: UserWarning:\n",
-      "\n",
-      "The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "combine =  pd.concat([monarchs2001, monarchs2000, monarchs1999, monarchs1998, monarchs1997, monarchs1996, monarchs1995, monarchs1994], axis =0)\n",
     "#combine.columns = [\"tag_no\", \"tag_state\", \"tag_date\",\"report_state\", \"report_country\", \"report_date\", \"miles\"]\n",
@@ -276,44 +272,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_tally = pd.read_sql('SELECT `Tag State`, COUNT(*) AS \"Recovered Tags\" FROM combine GROUP BY `Tag State` ORDER BY `Recovered Tags`DESC', db)\n",
-    "#state_tally = pd.read_sql('SELECT `Report State`, COUNT(*) AS \"Recovered Tags\" FROM monarchs1994 GROUP BY `Report State` ORDER BY `Report State`', db)"
+    "tag_tally = pd.read_sql('SELECT `Tag State`, COUNT(*) AS \"Recovered Tags\" FROM combine GROUP BY `Tag State` ORDER BY `Recovered Tags`DESC', db)\n",
+    "#recover_tally = pd.read_sql('SELECT `Report State`, COUNT(*) AS \"Recovered Tags\" FROM monarchs1994 GROUP BY `Report State` ORDER BY `Report State`', db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'file://C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\temp-plot.html'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# data = dict (\n",
-    "#     type = 'choropleth',\n",
-    "#     locations = state_tally['Tag State'],\n",
-    "#     locationmode='USA-states',\n",
-    "#     autocolorscale = False,\n",
-    "#     colorscale = ['Rainbow'],\n",
-    "#     z=state_tally['Recovered Tags'])\n",
+    "data = dict (\n",
+    "    type = 'choropleth',\n",
+    "    locations = tag_tally['Tag State'],\n",
+    "    locationmode='USA-states',\n",
+    "    autocolorscale = False,\n",
+    "    colorscale = ['Rainbow'],\n",
+    "    z=state_tally['Recovered Tags'])\n",
     "\n",
     "\n",
-    "# lyt = dict(geo=dict(scope='usa'))\n",
-    "# map = go.Figure(data=[data], layout = lyt)\n",
-    "# py.offline.plot(map)"
+    "lyt = dict(geo=dict(scope='north america'))\n",
+    "map = go.Figure(data=[data], layout = lyt)\n",
+    "py.offline.plot(map)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Embed Power BI maps, showing Tag Origin and Report Locations, as well as travel."
+    "### Embed Power BI maps, showing Tag Origin and Report Locations, as well as travel.\n",
+    "#### Page 1 shows Tag Origin Locations and Tag Report Locations. Page 2 shows travel for all seasons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -330,10 +338,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2556dafab88>"
+       "<IPython.lib.display.IFrame at 0x2560fc1a108>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
