--- a/Data/Monarchs_1999_cleanup.ipynb
+++ b/Data/Monarchs_1999_cleanup.ipynb
@@ -1134,6 +1134,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table['Season']='1999'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1142,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1192,10 +1201,11 @@
        "Report Country            object\n",
        "Report Date       datetime64[ns]\n",
        "Miles                    float64\n",
+       "Season                    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,12 +1234,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_table.to_pickle(\"Monarchs1999.pkl\")\n",
-    "new_table.to_csv(\"Monarchs1999.csv\")"
+    "new_table.to_csv(\"csv/Monarchs1999.csv\")"
    ]
   }
  ],
