plot.ly has my eyes crossing

--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MONARCH MIGRATION 1994 - 2001"
+    "<h1><center><font color=\"cc5500\"> MONARCH MIGRATION 1994 - 2001</font></center></h1>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,12 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "import os\n",
-    "from IPython.display import IFrame\n",
-    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot"
+    "from IPython.display import IFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +81,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +240,7 @@
        "8    8          Season       TEXT        0       None   0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,14 +254,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <img src=\"tag2.jpg\" style=\"width:400px;height:350px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Combine all years"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2663: UserWarning:\n",
+      "\n",
+      "The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "combine =  pd.concat([monarchs2001, monarchs2000, monarchs1999, monarchs1998, monarchs1997, monarchs1996, monarchs1995, monarchs1994], axis =0)\n",
     "#combine.columns = [\"tag_no\", \"tag_state\", \"tag_date\",\"report_state\", \"report_country\", \"report_date\", \"miles\"]\n",
@@ -272,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +308,7 @@
        "'file://C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\temp-plot.html'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -338,10 +355,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2560fc1a108>"
+       "<IPython.lib.display.IFrame at 0x2560fc1a608>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
